--- a/projects/imperium/src/styles.sass
+++ b/projects/imperium/src/styles.sass
@@ -5,3 +5,77 @@ button
   font: inherit
   color: inherit
   cursor: pointer
+
+.body 
+  background: #151515
+  color: white
+  text-align: center
+  font-family: 'Montserrat', sans-serif
+
+.color
+  width: 100px
+  height: 100px
+
+h1
+  color: #53868b
+
+.c1
+  background: #7f6c34
+
+.c2
+  background: #ca7558
+.c3 
+  background: #f9e09e
+.c4
+  background: #53868b
+.c5
+  background: #522602
+
+p
+  color: #f9e09e
+  background: #151515  
+  padding: 10px
+  max-width: 400px
+  margin: 10px auto
+  border: 1px solid #7f6c34 
+
+p.bg
+  background: #f9e09e 
+  padding: 10px
+  max-width: 400px
+  margin: 10px auto
+  color: #522602
+
+.flex
+  display: flex
+  align-items: center
+  justify-content: center
+
+.left-panel
+  background: #151515
+  position: absolute
+  left: 0px
+  top: 0px
+  height: 100vh
+  width: 300px
+  border-right: 1px solid #f9e09e
+  color: #ca7558
+  font-size: 200%
+
+.left-panel h1
+  font-size: 100%
+
+.right-panel 
+  position: absolute
+  left: 300px
+  top: 0px
+  height: 100vh
+  width: calc(100% - 300px)
+  background-image: url(./assets/poz.png)
+
+hr
+  border: 0
+  height: 0
+  border-bottom: 1px solid #7f6c34
+  max-width: 80%
+  margin: 30px auto
