Pridané akcie/reducery pre login

--- a/projects/imperium/src/app/load-game/load-game/load-game.component.html
+++ b/projects/imperium/src/app/load-game/load-game/load-game.component.html
@@ -1,4 +1,8 @@
-<p>load-game works!</p>
+<h1>Zadaj svoje meno:</h1>
 <p>{{ name$ | async }}</p>
+
+<form [formGroup]="loginForm">
+	<input type="text" formControlName="loginName">
+</form>
 
 <button (click)="login()">Prihlás</button>
