--- a/projects/imperium/src/styles.sass
+++ b/projects/imperium/src/styles.sass
@@ -20,7 +20,12 @@ a
   color: inherit
 
 h1
-  color: #53868b
+  background: #53868b
+  color: white
+  display: inline-block
+  padding: 10px 30px
+  border: 5px ridge #53868b
+  
 
 .c1
   background: #7f6c34
@@ -82,3 +87,9 @@ hr
   border-bottom: 1px solid #7f6c34
   max-width: 80%
   margin: 30px auto
+
+input[type="text"]
+  border: 1px solid goldenrod
+  background: black
+  padding: 10px
+  color: white
