--- a/projects/imperium/src/app/new-game/new-game/new-game.component.html
+++ b/projects/imperium/src/app/new-game/new-game/new-game.component.html
@@ -1,3 +1,5 @@
+<p>{{ name$ | async }}</p>
+
 <p class="bg">
 	Hra za čias viktoriánskeho anglicka, ale so slovanskou mytológiou.
 	<a href="https://www.youtube.com/watch?v=MJeNG1R7FzM&t=1198s&ab_channel=AmbienceofYesteryear" target="_blank">Inšpiratívne zvuky</a>
@@ -36,7 +38,7 @@
 </div>
 
 <div class="flex">
-	<img src="./../assets/bg.jpg">
-	<img src="./../assets/mec.png" width="250px">
-	<img src="./../assets/dom.png">
+	<img src="assets/bg.jpg">
+	<img src="assets/mec.png" width="250px">
+	<img src="assets/dom.png">
 </div>
