--- a/projects/imperium/src/styles.sass
+++ b/projects/imperium/src/styles.sass
@@ -6,6 +6,9 @@ button
   color: inherit
   cursor: pointer
 
+  &:hover
+    color: #53868b
+
 .body 
   background: #151515
   color: white
@@ -20,11 +23,11 @@ a
   color: inherit
 
 h1
-  background: #53868b
+  background: #7f6c34
   color: white
   display: inline-block
   padding: 10px 30px
-  border: 5px ridge #53868b
+  border: 5px ridge #7f6c34
   
 
 .c1
