--- a/projects/imperium/src/app/new-game/new-game/new-game.component.html
+++ b/projects/imperium/src/app/new-game/new-game/new-game.component.html
@@ -1,44 +1,11 @@
+<p>Nová hra</p>
+
+<h1>Zadaj meno svojej postavy:</h1>
 <p>{{ name$ | async }}</p>
 
-<p class="bg">
-	Hra za čias viktoriánskeho anglicka, ale so slovanskou mytológiou.
-	<a href="https://www.youtube.com/watch?v=MJeNG1R7FzM&t=1198s&ab_channel=AmbienceofYesteryear" target="_blank">Inšpiratívne zvuky</a>
-</p>
+<form [formGroup]="loginForm">
+	<input type="text" formControlName="loginName">
+</form>
 
-<p class="bg">
-	Vybuduj si svoje impérium!
-</p>
+<button (click)="login()">Prihlás</button>
 
-<p class="bg">
-	Vyšetrovanie vraždy. Boj s nepriateľmi. Zbieranie predmetov. Hutná atmosféra.
-</p>
-
-<p class="bg">
-	Plnenie úloh, návšteva obchodníkov.
-</p>
-
-<p class="bg">
-	Zbieranie predmetov.
-</p>
-
-<p class="bg">
-	Predvytvorené postavy a ich vylepšovanie.
-</p>
-
-<p>
-	Browserová hra (PC/Tablet), Angular (rxjs, ngrx) Spočiatku iba frontend, neskôr backend (PHP, mysql/sqlite).
-</p>
-
-<div class="flex">
-	<div class="color c1">1</div>
-	<div class="color c2">2</div>
-	<div class="color c3">3</div>
-	<div class="color c4">4</div>
-	<div class="color c5">5</div>
-</div>
-
-<div class="flex">
-	<img src="assets/bg.jpg">
-	<img src="assets/mec.png" width="250px">
-	<img src="assets/dom.png">
-</div>
