Práca so selectormi

--- a/projects/imperium/src/app/load-game/load-game/load-game.component.html
+++ b/projects/imperium/src/app/load-game/load-game/load-game.component.html
@@ -3,6 +3,7 @@
 
 <form [formGroup]="loginForm">
 	<input type="text" formControlName="loginName">
+	<input type="password" formControlName="loginPassword">
 </form>
 
 <button (click)="login()">Prihlás</button>
