--- a/projects/imperium/src/app/new-game/new-game/new-game.component.html
+++ b/projects/imperium/src/app/new-game/new-game/new-game.component.html
@@ -5,6 +5,7 @@
 
 <form [formGroup]="loginForm">
 	<input type="text" formControlName="loginName">
+	<input type="password" formControlName="loginPassword">
 </form>
 
 <button (click)="login()">Prihlás</button>
