--- a/projects/imperium/src/styles.sass
+++ b/projects/imperium/src/styles.sass
@@ -23,12 +23,7 @@ a
   color: inherit
 
 h1
-  background: #7f6c34
-  color: white
-  display: inline-block
-  padding: 10px 30px
-  border: 5px ridge #7f6c34
-  
+  color: #53868b
 
 .c1
   background: #7f6c34
@@ -42,7 +37,7 @@ h1
 .c5
   background: #522602
 
-p
+p, div.p
   color: #f9e09e
   background: #151515  
   padding: 10px
@@ -78,6 +73,7 @@ p.bg
 
 .right-panel 
   position: absolute
+  overflow: auto
   left: 300px
   top: 0px
   height: 100vh
@@ -91,7 +87,7 @@ hr
   max-width: 80%
   margin: 30px auto
 
-input[type="text"]
+input[type="text"], input[type="password"]
   border: 1px solid goldenrod
   background: black
   padding: 10px
