Ďalšie úpravy prihlasovania

--- a/projects/imperium/src/app/play-game/play-game/play-game.component.html
+++ b/projects/imperium/src/app/play-game/play-game/play-game.component.html
@@ -37,7 +37,7 @@
 	<div class="color c5">5</div>
 </div>
 
-<div class="flex maybe-column">
+<div>
 	<img src="assets/bg.jpg">
 	<img src="assets/mec.png" width="250px">
 	<img src="assets/dom.png">
