--- a/projects/imperium/src/styles.sass
+++ b/projects/imperium/src/styles.sass
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body
+  margin: 0
+
 button
   border: 0
   background: transparent
@@ -8,12 +11,6 @@ button
 
   &:hover
     color: #53868b
-
-.body 
-  background: #151515
-  color: white
-  text-align: center
-  font-family: 'Montserrat', sans-serif
 
 .color
   width: 100px
@@ -70,15 +67,6 @@ p.bg
 
 .left-panel h1
   font-size: 100%
-
-.right-panel 
-  position: absolute
-  overflow: auto
-  left: 300px
-  top: 0px
-  height: 100vh
-  width: calc(100% - 300px)
-  background-image: url(./assets/poz.png)
 
 hr
   border: 0
