--- a/projects/imperium/src/app/core/templates/left-menu/left-menu.component.html
+++ b/projects/imperium/src/app/core/templates/left-menu/left-menu.component.html
@@ -2,13 +2,17 @@
 <br><br>
 <br><br>
 <br>
+<ng-container *ngIf="isLoggedIn$ | async">
+	<button [routerLink]="['/play-game']">Pokračuj v hre</button>
+	<br><br>
+</ng-container>
 <button [routerLink]="['/story']">Príbeh</button>
 <br>
 <br>
 <button [routerLink]="['/new-game']">Nová hra</button>
 <br>
 <br>
-<button [routerLink]="['/load-game']">Načítať hru</button>
+<button [routerLink]="['/load-game']">Pokračovať v hre</button>
 <br>
 <br>
 <button [routerLink]="['/settings']">Nastavenia</button>
