--- a/projects/imperium/src/app/settings/settings/settings.component.html
+++ b/projects/imperium/src/app/settings/settings/settings.component.html
@@ -1,1 +1,3 @@
-<p>settings works!</p>
+<form [formGroup]="settingsForm" (ngSubmit)="onSubmit()">
+	<p><label><input type="checkbox" formControlName="doNotLogout">Neodhlasovať ma (nejde)</label></p>
+</form>
