--- a/projects/imperium/src/app/settings/settings/settings.component.html
+++ b/projects/imperium/src/app/settings/settings/settings.component.html
@@ -1,3 +1,3 @@
 <form [formGroup]="settingsForm" (ngSubmit)="onSubmit()">
-	<p><label><input type="checkbox" formControlName="doNotLogout">Neodhlasovať ma (nejde)</label></p>
+	<p><label><input type="checkbox" formControlName="doNotLogout">Neodhlasovať ma na tomto zariadení</label></p>
 </form>
