Pridané veci do hry

--- a/projects/imperium/src/app/play-game/left-ingame-menu/left-ingame-menu.component.html
+++ b/projects/imperium/src/app/play-game/left-ingame-menu/left-ingame-menu.component.html
@@ -1,1 +1,26 @@
-<p>left-menu works!</p>
+<div class="ingame-left-menu">
+	<button (click)="travel()">Postava</button>
+	<button (click)="travel()">Mapa</button>
+	<button (click)="travel()">Úlohy</button>
+	<button (click)="travel()">Predmety</button>
+	<button (click)="travel()">Dom</button>
+	<button (click)="travel()">Kontakty</button>
+	<button (click)="travel()">Pošta</button>
+	<button (click)="travel()">Telocvičňa</button>
+	<button (click)="travel()">Kotolňa</button>
+	<button (click)="travel()">Stoky</button>
+	<button (click)="travel()">Cintorín</button>
+	<button (click)="travel()">Knižnica</button>
+	<button (click)="travel()">Krčma</button>
+	<button (click)="travel()">Obchod so zbraňami</button>
+	<button (click)="travel()">Obchod s potravinami</button>
+	<button (click)="travel()">Chrám</button>
+	<button (click)="travel()">Temža</button>
+	<button (click)="travel()">Most</button>
+	<button (click)="travel()">Sklady</button>
+	<button (click)="travel()">Stajne</button>
+	<button (click)="travel()">Trhovisko</button>
+	<button (click)="travel()">Železničná stanica</button>
+	<button (click)="travel()">Prístav</button>
+	<button (click)="travel('end')">Koniec</button>
+</div>
