--- a/projects/imperium/src/app/play-game/play-game/play-game.component.html
+++ b/projects/imperium/src/app/play-game/play-game/play-game.component.html
@@ -1,45 +1,50 @@
 <imp-ingame-left-menu></imp-ingame-left-menu>
-<p>{{ name$ | async }}</p>
 
-<p class="bg">
-	Hra za čias viktoriánskeho anglicka, ale so slovanskou mytológiou.
-	<a href="https://www.youtube.com/watch?v=MJeNG1R7FzM&t=1198s&ab_channel=AmbienceofYesteryear" target="_blank">Inšpiratívne zvuky</a>
-</p>
+<div class="right-ingame-panel">
+	<p class="tal">{{ name$ | async }} Nachádzaš sa: Doma</p>
 
-<p class="bg">
-	Vybuduj si svoje impérium!
-</p>
+	<p class="bg">
+		Hra za čias viktoriánskeho anglicka, ale so slovanskou mytológiou.
+		<a href="https://www.youtube.com/watch?v=MJeNG1R7FzM&t=1198s&ab_channel=AmbienceofYesteryear" target="_blank">Inšpiratívne zvuky</a>
+	</p>
 
-<p class="bg">
-	Vyšetrovanie vraždy. Boj s nepriateľmi. Zbieranie predmetov. Hutná atmosféra.
-</p>
+	<p class="bg">
+		Vybuduj si svoje impérium!
+	</p>
 
-<p class="bg">
-	Plnenie úloh, návšteva obchodníkov.
-</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<p class="bg">
-	Zbieranie predmetov.
-</p>
+	<p class="bg">
+		Vyšetrovanie vraždy. Boj s nepriateľmi. Zbieranie predmetov. Hutná atmosféra.
+	</p>
 
-<p class="bg">
-	Predvytvorené postavy a ich vylepšovanie.
-</p>
+	<p class="bg">
+		Plnenie úloh, návšteva obchodníkov.
+	</p>
 
-<p>
-	Browserová hra (PC/Tablet), Angular (rxjs, ngrx) Spočiatku iba frontend, neskôr backend (PHP, mysql/sqlite).
-</p>
+	<p class="bg">
+		Zbieranie predmetov.
+	</p>
 
-<div class="flex">
-	<div class="color c1">1</div>
-	<div class="color c2">2</div>
-	<div class="color c3">3</div>
-	<div class="color c4">4</div>
-	<div class="color c5">5</div>
-</div>
+	<p class="bg">
+		Predvytvorené postavy a ich vylepšovanie.
+	</p>
 
-<div>
-	<img src="assets/bg.jpg">
-	<img src="assets/mec.png" width="250px">
-	<img src="assets/dom.png">
+	<p>
+		Browserová hra (PC/Tablet), Angular (rxjs, ngrx) Spočiatku iba frontend, neskôr backend (PHP, mysql/sqlite).
+	</p>
+
+	<div class="flex">
+		<div class="color c1">1</div>
+		<div class="color c2">2</div>
+		<div class="color c3">3</div>
+		<div class="color c4">4</div>
+		<div class="color c5">5</div>
+	</div>
+
+	<div>
+		<img src="assets/bg.jpg">
+		<img src="assets/mec.png" width="250px">
+		<img src="assets/dom.png" width="400px">
+	</div>
 </div>
