--- a/projects/imperium/src/styles.sass
+++ b/projects/imperium/src/styles.sass
@@ -2,6 +2,9 @@
 body
   margin: 0
 
+.tal
+  text-align: left
+
 button
   border: 0
   background: transparent
@@ -38,7 +41,7 @@ p, div.p
   color: #f9e09e
   background: #151515  
   padding: 10px
-  max-width: 400px
+  max-width: 600px
   margin: 10px auto
   border: 1px solid #7f6c34 
 
