Pridaný hangár vzducholodí :)

--- a/projects/imperium/src/app/play-game/left-ingame-menu/left-ingame-menu.component.html
+++ b/projects/imperium/src/app/play-game/left-ingame-menu/left-ingame-menu.component.html
@@ -22,5 +22,6 @@
 	<button (click)="travel()">Trhovisko</button>
 	<button (click)="travel()">Železničná stanica</button>
 	<button (click)="travel()">Prístav</button>
+	<button (click)="travel()">Hangár vzducholodí</button>
 	<button (click)="travel('end')">Koniec</button>
 </div>
