úprava herného menu

--- a/projects/imperium/src/app/play-game/left-ingame-menu/left-ingame-menu.component.html
+++ b/projects/imperium/src/app/play-game/left-ingame-menu/left-ingame-menu.component.html
@@ -3,12 +3,19 @@
 	<button (click)="travel()">Mapa</button>
 	<button (click)="travel()">Úlohy</button>
 	<button (click)="travel()">Predmety</button>
+	<h2>Obchodná štvrť</h2>
 	<button (click)="travel()">Dom</button>
 	<button (click)="travel()">Kontakty</button>
 	<button (click)="travel()">Pošta</button>
 	<button (click)="travel()">Telocvičňa</button>
-	<button (click)="travel()">Kotolňa</button>
+	<button (click)="travel()">Spalovňa</button>
+	<button (click)="travel()">Strelnica</button>
+	<button (click)="travel()">Sirotinec</button>
 	<button (click)="travel()">Stoky</button>
+	<button (click)="travel()">Apatieka</button>
+	<button (click)="travel()">Alchymista</button>
+	<button (click)="travel()">Kováč</button>
+	<h2>Chudobná štvrť</h2>
 	<button (click)="travel()">Cintorín</button>
 	<button (click)="travel()">Knižnica</button>
 	<button (click)="travel()">Krčma</button>
@@ -17,11 +24,13 @@
 	<button (click)="travel()">Chrám</button>
 	<button (click)="travel()">Temža</button>
 	<button (click)="travel()">Most</button>
+	<h2>Priemyselná štvrť</h2>
 	<button (click)="travel()">Sklady</button>
 	<button (click)="travel()">Stajne</button>
 	<button (click)="travel()">Trhovisko</button>
 	<button (click)="travel()">Železničná stanica</button>
 	<button (click)="travel()">Prístav</button>
 	<button (click)="travel()">Hangár vzducholodí</button>
+	<br>
 	<button (click)="travel('end')">Koniec</button>
 </div>
