--- a/projects/imperium/src/app/load-game/load-game/load-game.component.html
+++ b/projects/imperium/src/app/load-game/load-game/load-game.component.html
@@ -1,5 +1,5 @@
 <div class="p">
-	<h1>Načítaj hru</h1>
+	<h1>Prihlás sa do hry</h1>
 
 	<form [formGroup]="loginForm">
 		<input type="text" formControlName="loginName">
