--- a/projects/imperium/src/app/core/templates/main-layout/main-layout.component.sass
+++ b/projects/imperium/src/app/core/templates/main-layout/main-layout.component.sass
@@ -6,6 +6,9 @@
   height: 100vh
   width: calc(100% - 300px)
   background-image: url(./../../../../assets/poz.png)
+  display: flex
+  align-items: center
+  justify-content: center
 
 .body 
   background: #151515
