--- a/projects/imperium/src/app/play-game/play-game/play-game.component.html
+++ b/projects/imperium/src/app/play-game/play-game/play-game.component.html
@@ -1,14 +1,286 @@
 <imp-ingame-left-menu></imp-ingame-left-menu>
 
 <div class="right-ingame-panel">
-	<p class="tal">{{ name$ | async }} Nachádzaš sa: Doma</p>
+	<p class="tal">{{ name$ | async }} nachádzaš sa: {{ position$ | async }}</p>
 
 	<img src="assets/dom.png" width="400px">
+	<img src="assets/typingwoman.webp">
 
 	<p class="bg">
 		Hra za čias viktoriánskeho anglicka, ale so slovanskou mytológiou.
 		<a href="https://www.youtube.com/watch?v=MJeNG1R7FzM&t=1198s&ab_channel=AmbienceofYesteryear" target="_blank">Inšpiratívne zvuky</a>
 	</p>
+
+	<img src="assets/horse.webp" width="200px">
+
+	<table cellpadding="1" cellspacing="1">
+	<tr>
+		<th>Meno</th>
+		<th>Adresa</th>
+		<th>Číslo</th>
+		<th>ID</th>
+	</tr>
+	<tr>
+		<td>Maxine Woodward</td>
+		<td>1609</td>
+		<td>653</td>
+		<td>A5430F93-6DD6-5D12-4997-832803FF8C24</td>
+	</tr>
+	<tr>
+		<td>Ciara B. Finley</td>
+		<td>P9V 4L5</td>
+		<td>356</td>
+		<td>A4450BD0-E6AC-0BA4-0678-4EED603CA07E</td>
+	</tr>
+	<tr>
+		<td>Latifah S. Hopkins</td>
+		<td>6425</td>
+		<td>292</td>
+		<td>A4D992EC-8E40-2222-8F90-465588729D22</td>
+	</tr>
+	<tr>
+		<td>Vera Lynn</td>
+		<td>41609</td>
+		<td>546</td>
+		<td>B0EC0459-C76B-63B5-90E8-11298F16705C</td>
+	</tr>
+	<tr>
+		<td>Illana Grimes</td>
+		<td>88078</td>
+		<td>302</td>
+		<td>5AE7145B-92EA-BA38-A11F-1A14F3B07CCD</td>
+	</tr>
+	<tr>
+		<td>Hedda Carney</td>
+		<td>147213</td>
+		<td>791</td>
+		<td>AEAB8D08-58B1-D0E0-E099-5083F97A55AD</td>
+	</tr>
+	<tr>
+		<td>Yuli F. Hubbard</td>
+		<td>05986</td>
+		<td>389</td>
+		<td>56AEB6AB-6521-8514-C943-E9A0C0C04B75</td>
+	</tr>
+	<tr>
+		<td>Quamar J. Bishop</td>
+		<td>34814</td>
+		<td>486</td>
+		<td>EC234423-865D-59AA-48A3-2E2E0C984A6D</td>
+	</tr>
+	<tr>
+		<td>Griffith E. Collier</td>
+		<td>20238-832</td>
+		<td>855</td>
+		<td>6FFC5B1F-16CE-CDCA-0CCB-802A4E7AAC35</td>
+	</tr>
+	<tr>
+		<td>Malcolm C. Steele</td>
+		<td>51933</td>
+		<td>388</td>
+		<td>17492467-39D8-6D07-4C62-B25FFA8B4614</td>
+	</tr>
+	<tr>
+		<td>Amethyst N. Holden</td>
+		<td>67131</td>
+		<td>349</td>
+		<td>60F71242-B478-14FB-CE5B-5FFBD3C13E47</td>
+	</tr>
+	<tr>
+		<td>Deanna H. Curtis</td>
+		<td>7636 TL</td>
+		<td>648</td>
+		<td>957E8898-842B-6B48-D2C9-7239FC05505C</td>
+	</tr>
+	<tr>
+		<td>Eagan Hess</td>
+		<td>376418</td>
+		<td>353</td>
+		<td>9404939D-A865-B4A5-0C7E-5829BA52FF48</td>
+	</tr>
+	<tr>
+		<td>Hashim Waller</td>
+		<td>413329</td>
+		<td>114</td>
+		<td>7BF7A10D-D2B5-C467-CA7A-BF0B8A29CCFA</td>
+	</tr>
+	<tr>
+		<td>Noelani E. Baxter</td>
+		<td>65401-246</td>
+		<td>946</td>
+		<td>F5F4220F-E377-D28A-FDED-F8D25385BCA1</td>
+	</tr>
+	<tr>
+		<td>Hedwig Bass</td>
+		<td>8084</td>
+		<td>767</td>
+		<td>F95F21E0-BEBC-6592-276F-9C6F2B82298A</td>
+	</tr>
+	<tr>
+		<td>Olga P. Holden</td>
+		<td>39173</td>
+		<td>813</td>
+		<td>73E527DB-441C-2321-F078-33925C1EBACF</td>
+	</tr>
+	<tr>
+		<td>Kasimir Carey</td>
+		<td>6436</td>
+		<td>696</td>
+		<td>4CDDBDDD-E8FD-99A4-EDE1-6634C95913E4</td>
+	</tr>
+	<tr>
+		<td>Lavinia Simpson</td>
+		<td>61900</td>
+		<td>741</td>
+		<td>3AD5A68D-D053-9B72-32B1-C04582D97F5C</td>
+	</tr>
+	<tr>
+		<td>Alfreda J. Benton</td>
+		<td>69262-786</td>
+		<td>948</td>
+		<td>5F2036CB-A0D9-5240-A36F-8BEFA1C3213E</td>
+	</tr>
+	<tr>
+		<td>Iris Hawkins</td>
+		<td>6060</td>
+		<td>707</td>
+		<td>F0A2BF71-4D63-4894-CECD-600BCBD4A86F</td>
+	</tr>
+	<tr>
+		<td>Jana Evans</td>
+		<td>31401</td>
+		<td>257</td>
+		<td>C8917227-5B73-8E1F-6065-2472203C6C0E</td>
+	</tr>
+	<tr>
+		<td>Helen I. Gutierrez</td>
+		<td>5282</td>
+		<td>694</td>
+		<td>C2D248FB-B397-D7AD-4228-6482A4217C86</td>
+	</tr>
+	<tr>
+		<td>Reed Key</td>
+		<td>39169</td>
+		<td>590</td>
+		<td>0579C467-CFA7-818D-C51B-EB4D44FAD909</td>
+	</tr>
+	<tr>
+		<td>Randall Rocha</td>
+		<td>9172</td>
+		<td>759</td>
+		<td>6B3284DF-64FB-79C2-C3A3-FA8F4AACA733</td>
+	</tr>
+	<tr>
+		<td>Felix N. Roman</td>
+		<td>Z7372</td>
+		<td>286</td>
+		<td>CEC86B3B-9DE8-AFA4-2DDD-D32428ED2F3E</td>
+	</tr>
+	<tr>
+		<td>Kaden Bonner</td>
+		<td>9358</td>
+		<td>514</td>
+		<td>8465056F-2BAA-51F7-F948-75851F814B8A</td>
+	</tr>
+	<tr>
+		<td>Yoshio M. Bauer</td>
+		<td>H0N 6W5</td>
+		<td>814</td>
+		<td>0AEFE649-BBD8-F6EA-AA8B-1612CC68DB11</td>
+	</tr>
+	<tr>
+		<td>Teegan Knowles</td>
+		<td>21909</td>
+		<td>585</td>
+		<td>F4E25E90-C00A-5E61-A2FC-7B66D5119651</td>
+	</tr>
+	<tr>
+		<td>Gabriel Frye</td>
+		<td>3081</td>
+		<td>186</td>
+		<td>76377F34-9E67-B87F-3F68-2E067B99B7EF</td>
+	</tr>
+	<tr>
+		<td>Rae X. Drake</td>
+		<td>7503</td>
+		<td>913</td>
+		<td>B9745A4B-F3A1-F4C9-6444-784252EE7CAF</td>
+	</tr>
+	<tr>
+		<td>Asher N. Price</td>
+		<td>326670</td>
+		<td>373</td>
+		<td>01A79535-13BB-65D0-89AB-B7932ED284B0</td>
+	</tr>
+	<tr>
+		<td>Axel S. Bender</td>
+		<td>4832</td>
+		<td>680</td>
+		<td>52C9600C-676C-43AA-8711-E1E08F07D7A4</td>
+	</tr>
+	<tr>
+		<td>Dieter K. Atkins</td>
+		<td>24877</td>
+		<td>595</td>
+		<td>B91C6BA7-734E-76BE-F099-4A983E9603F7</td>
+	</tr>
+	<tr>
+		<td>Noah X. Griffin</td>
+		<td>79303</td>
+		<td>975</td>
+		<td>8BD68A3E-1B0C-A195-44F1-B017C8CF62B5</td>
+	</tr>
+	<tr>
+		<td>Gail Graham</td>
+		<td>47506</td>
+		<td>206</td>
+		<td>4716A62F-0118-960E-31CF-37EE572CE1C5</td>
+	</tr>
+	<tr>
+		<td>Allistair N. Hopper</td>
+		<td>20417</td>
+		<td>846</td>
+		<td>53F8CC9E-8154-E0B1-209B-A30EF96FE911</td>
+	</tr>
+	<tr>
+		<td>Clementine G. Vaughn</td>
+		<td>21718</td>
+		<td>263</td>
+		<td>91D2D8ED-522F-26DB-2D2D-CF291EF19A05</td>
+	</tr>
+	<tr>
+		<td>Hoyt Mcleod</td>
+		<td>2908</td>
+		<td>434</td>
+		<td>A8A7ED68-9105-FB60-5AFC-FBDEAF72F5F3</td>
+	</tr>
+	<tr>
+		<td>Moses F. Banks</td>
+		<td>515450</td>
+		<td>208</td>
+		<td>FBCBB7DF-B493-768B-7754-8EBCCB592B05</td>
+	</tr>
+	<tr>
+		<td>Brody I. Stanton</td>
+		<td>8886</td>
+		<td>853</td>
+		<td>F83516CA-338C-B889-20D8-AE525666A703</td>
+	</tr>
+	<tr>
+		<td>Morgan Alston</td>
+		<td>3155</td>
+		<td>250</td>
+		<td>29C38815-F658-C9FF-C650-FC5F1F8919E9</td>
+	</tr>
+	<tr>
+		<td>Angelica Ball</td>
+		<td>623988</td>
+		<td>487</td>
+		<td>91AB2C3D-9480-3359-F9CC-2980F5947ED1</td>
+	</tr>
+	</table>
+
+	<img src="assets/200w.webp">
 
 	<div class="flex">
 		<div class="color c1">1</div>
@@ -22,11 +294,29 @@
 		Vybuduj si svoje impérium!
 	</p>
 
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>Lorem <em>ipsum dolor sit amet,</em> consectetur adipiscing elit, <strong>sed do</strong> eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor <em>in reprehenderit in voluptate velit</em> esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+	<pre>
+                    /
+               ,.. /
+             ,'   ';
+  ,,.__    _,' /';  .
+ :','  ~~~~    '. '~
+:' (   )         )::,
+'. '. .=----=..-~  .;'
+ '  ;'  ::   ':.  '"
+   (:   ':    ;)
+    \\   '"  ./
+     '"      '"
+	</pre>
 
 	<p class="bg">
 		Vyšetrovanie vraždy. Boj s nepriateľmi. Zbieranie predmetov. Hutná atmosféra.
 	</p>
+
+	<pre>(-(-_(-_-)_-)-)</pre>
+
+	<pre>╭∩╮(Ο_Ο)╭∩╮</pre>
 
 	<img src="assets/bg.jpg">
 
@@ -34,15 +324,20 @@
 		Plnenie úloh, návšteva obchodníkov.
 	</p>
 
+	<img src="assets/salem.gif" width="200px">
+
 	<img src="assets/mec.png" width="250px">
 
 	<p class="bg">
 		Zbieranie predmetov.
 	</p>	
 
+	<img src="assets/wuman.webp" width="200px">
+
 	<p>
 		Browserová hra (PC/Tablet), Angular (rxjs, ngrx) Spočiatku iba frontend, neskôr backend (PHP, mysql/sqlite).
 	</p>
+
 
 	<p class="bg">
 		Predvytvorené postavy a ich vylepšovanie.
