--- a/projects/imperium/src/app/play-game/play-game/play-game.component.sass
+++ b/projects/imperium/src/app/play-game/play-game/play-game.component.sass
@@ -4,3 +4,24 @@
 
 .right-ingame-panel
   margin-left: 150px
+
+em
+  color: pink
+  font-family: cursive
+
+strong
+  color: goldenrod
+  font-family: times
+
+pre
+  color: yellow
+
+table
+  font-size: 12px
+  margin: auto
+  border-spacing: 1px
+  border: 1px
+  background: sienna
+
+  td
+    background: #151515
