--- a/projects/imperium/src/app/core/templates/main-layout/main-layout.component.sass
+++ b/projects/imperium/src/app/core/templates/main-layout/main-layout.component.sass
@@ -16,4 +16,10 @@
   text-align: center
   font-family: 'Montserrat', sans-serif
 
-
+#version
+  position: absolute
+  bottom: 0
+  right: 0
+  z-index: 1000000
+  color: silver
+  font-size: 10px
