--- a/projects/imperium/src/app/play-game/market/market.component.html
+++ b/projects/imperium/src/app/play-game/market/market.component.html
@@ -49,13 +49,13 @@
 		<td>A4D992EC-8E40-2222-8F90-465588729D22</td>
 	</tr>
 	<tr>
-		<td>Vera Lynn</td>
+		<td><img src="assets/salem.gif" width="50px">Vera Lynn</td>
 		<td>41609</td>
 		<td>546</td>
 		<td>B0EC0459-C76B-63B5-90E8-11298F16705C</td>
 	</tr>
 	<tr>
-		<td>Illana Grimes</td>
+		<td><img src="assets/wuman.webp" width="50px"> Illana Grimes</td>
 		<td>88078</td>
 		<td>302</td>
 		<td>5AE7145B-92EA-BA38-A11F-1A14F3B07CCD</td>
@@ -190,14 +190,11 @@
 
 	<pre>╭∩╮(Ο_Ο)╭∩╮</pre>
 
-	<img src="assets/wuman.webp" width="200px">
 	<img src="assets/bg.jpg">
 
 	<p class="bg">
 		Plnenie úloh, návšteva obchodníkov.
-	</p>
-
-	<img src="assets/salem.gif" width="200px">
+	</p>	
 
 	<img src="assets/mec.png" width="250px">
 
