--- a/projects/imperium/src/app/play-game/market/market.component.html
+++ b/projects/imperium/src/app/play-game/market/market.component.html
@@ -9,7 +9,7 @@
 		<a href="https://www.youtube.com/watch?v=MJeNG1R7FzM&t=1198s&ab_channel=AmbienceofYesteryear" target="_blank">Inšpiratívne zvuky</a>
 	</p>
 
-	<p>
+	<p (click)="buyItem(1)">
 		<em class="blink">AKCIA!!! Zľava 25% na podkovy</em>
 		<img src="assets/horse.webp" width="100px" style="vertical-align: middle">
 	</p>
