--- a/projects/imperium/src/app/play-game/market/market.component.sass
+++ b/projects/imperium/src/app/play-game/market/market.component.sass
@@ -3,7 +3,8 @@
     flex-direction: column
 
 .right-ingame-panel
-  margin-left: 150px
+  margin-right: 50px
+  margin-left: 50px
 
 em
   color: pink
