--- a/projects/imperium/src/app/core/templates/game-layout/game-layout.component.sass
+++ b/projects/imperium/src/app/core/templates/game-layout/game-layout.component.sass
@@ -14,4 +14,7 @@
   text-align: center
   font-family: 'Montserrat', sans-serif
 
-
+#leftMenu
+  float: left
+  border: 1px solid #7f6c34
+  width: 150px
