--- a/projects/imperium/src/app/story/story/story.component.html
+++ b/projects/imperium/src/app/story/story/story.component.html
@@ -1,14 +1,10 @@
-<h1>Ako to všetko začalo</h1>
-<p>
-	Dostal si sa do Londýna s pár drobnými v kapsách. Všetko leží pred tebou a je len na tebe ako sa popasuješ s osudom.
-</p>
-<p>
-	Na ulici vidíš plno ľudí z každého kúta sveta. Niektorý sú oblečený ako trhani, iní zas nosia drahé obleky.
-</p>
-<p>
-	V hlave máš iba jediné. Dostať sa čo najrýchlejšie ku tvojmu jedinému kontaktu v tomto rozhľahlom meste&hellip;
-	<br>
-	<br>
-	<a [routerLink]="['/new-game']">začať hrať</a>
-</p>
+<h1>Príbeh</h1>
+<div class="card">
+	<h2>Ako to všetko začalo</h2>
+	<hr>
+	<p>Dostal si sa do Londýna s pár drobnými v kapsách. Všetko leží pred tebou a je len na tebe ako sa popasuješ s osudom.</p>
+	<p>Na ulici vidíš plno ľudí z každého kúta sveta. Niektorý sú oblečený ako trhani, iní zas nosia drahé obleky.</p>
+	<p>Tvoj cieľ je dostať sa čo najrýchlejšie ku tvojmu jedinému kontaktu v tomto rozhľahlom meste&hellip;</p>
+	<p><br><a [routerLink]="['/new-game']">ZAČAŤ HRAŤ</a></p>
+</div>
 
